--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     <div class="terminal">
         <div class="header">
-            <div class="name">Under Construction</div>
+            <div class="name">Hey there!</div>
         </div>
         <div class="description">
             Greetings to you, the one who has stumbled upon my website!👋🏼<br>
@@ -234,17 +234,18 @@
                 Or
             </div>
             <div><a class="cv-button"
-                    href="https://docs.google.com/document/d/1PlLA0m3CAjtYUxXkLcpzDmGJRy-lo3sievLWtKr3Rq8/edit?usp=sharing"
+                    href="./Madhawa_Monarawila_CV.pdf"
                     target="_blank">View CV</a></div>
         </div>
     </div>
 
     <script>
         const sections = [
-            'a SE Intern @Emojot Inc.',
             'a SE at @SEF.',
-            'an Undergraduate @ITUM.',
-            'a Calcey Springboard Scholar.'
+            'a final year Undergraduate @ITUM.',
+            'a Calcey Springboard Scholar.',
+            'an Ex SE Intern @WSO2.',
+            'an Ex SE Intern @Emojot.',
         ];
 
         const descriptionElement = document.getElementById('desc-section');
