--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px var(--shadow-color);
             position: relative;
-            margin-top: 50px;
-            margin-bottom: 20px;
+            margin: calc(100vh - 80vh) auto;
         }
 
         .header {
@@ -173,6 +172,10 @@
         @media (max-width: 600px) {
             .terminal {
                 width: 90%;
+                margin-top: 50px;
+                margin-bottom: 20px;
+                border: none;
+                box-shadow: none;
             }
 
             .name {
